[project]
name = "codex-trading-lab-integrated"
version = "0.1.0"
description = "Standalone integrated trading decision lab with deterministic analysis, permission, replay, learning and Codex worker boundaries"
requires-python = ">=3.11"
dependencies = ["jsonschema>=4.20"]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
